Fix layout on small screens

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,18 +24,24 @@
 }
 
 .footerContent {
-  padding: 12px;
+  padding: 12px 32px;
+  width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   gap: 24px;
 }
 
 @media screen and (max-width: 600px) {
-  .wrapper {
+  .content {
     padding: 16px;
+  }
+
+  .footerContent {
+    padding: 12px 16px;
   }
 }
 
